Commit by ankit

--- a/Ankit_IPL_T20_Cricket_Analysis_Capstone_Project.ipynb
+++ b/Ankit_IPL_T20_Cricket_Analysis_Capstone_Project.ipynb
@@ -4451,7 +4451,7 @@
         "id": "GNjJAMwenGBp"
       },
       "source": [
-        "\n",
+        "# comment by ankit bansal\n",
         "def get_india_heat_map(map_df, column_name, ipl_season):\n",
         "  fig, ax = plt.subplots(1, figsize=(13, 13))\n",
         "  ax.axis('on')\n",
