Commit by Sravya

--- a/Ankit_IPL_T20_Cricket_Analysis_Capstone_Project.ipynb
+++ b/Ankit_IPL_T20_Cricket_Analysis_Capstone_Project.ipynb
@@ -60,7 +60,7 @@
       "source": [
         "!pip install geopandas"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,7 +109,7 @@
         "import geopandas as gpd\n",
         "import plotly.express as px"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -125,7 +125,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,7 +144,7 @@
       "source": [
         "folder_path = '/content/drive/MyDrive/AlmaBetter/Capstone Projects/EDA/IPL/data'"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -156,7 +156,7 @@
         "fp = f\"/content/drive/MyDrive/AlmaBetter/Capstone Projects/EDA/IPL/igismap/Indian_States.shp\"\n",
         "map_df = gpd.read_file(fp)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -172,7 +172,7 @@
         "teams_df = pd.read_csv(folder_path+'/teams.csv')\n",
         "teamwise_home_and_away_df = pd.read_csv(folder_path+'/teamwise_home_and_away.csv')"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -188,7 +188,7 @@
       "source": [
         "players_df.head()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -293,7 +293,7 @@
       "source": [
         "deliveries_df.head()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -495,7 +495,7 @@
       "source": [
         "deliveries_df.shape"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -524,7 +524,7 @@
       "source": [
         "matches_df.head()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -709,7 +709,7 @@
       "source": [
         "most_runs_avg_sr_df"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -883,7 +883,7 @@
       "source": [
         "teams_df"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1014,7 +1014,7 @@
       "source": [
         "teamwise_home_and_away_df.head()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1169,7 +1169,7 @@
         "matches_df['city'] = matches_df['city'].apply(lambda x: change_name(x, old_city_new_city_dict))\n",
         "\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1194,7 +1194,7 @@
         "    \n",
         "matches_df = pd.concat([matches_df,pd.DataFrame({'match_number':ls})],axis=1)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1217,7 +1217,7 @@
         "print('matches_df Shape: ',matches_df.shape)\n",
         "print('deliveries_df Shape: ',deliveries_df.shape)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1396,7 +1396,7 @@
         "    else:\n",
         "        return None\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1408,7 +1408,7 @@
         "def get_match_deliveries(match_id):\n",
         "  return deliveries_df[deliveries_df['match_id'] == match_id]"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1450,7 +1450,7 @@
         "\n",
         "  return final_batsman_df, final_bowler_df\n"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1466,7 +1466,7 @@
       "source": [
         "deliveries_df[deliveries_df.match_id == 56].head(1)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1578,7 +1578,7 @@
         "  #over_runs_wickets['wickets'] = temp_df.groupby('over')['player_dismissed'].sum()\n",
         "    return over_runs_wickets"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1651,7 +1651,7 @@
         "  # return batsman_run_ball_dict,  bowler_detail_dict\n",
         "  return create_inning_scorecard(batsman_run_ball_dict, bowler_detail_dict), wickets_fall, overs_stats\n"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1699,7 +1699,7 @@
         "  return inn_1, wickets_1, inn_2, wickets_2, result, overs_stats_1, overs_stats_2\n",
         "  #return get_batsman_bowler_details(inning_one_df), get_batsman_bowler_details(inning_two_df)  \n"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1719,7 +1719,7 @@
         "print('Scorecard: ')\n",
         "inn_1['scorecard'][0]"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1877,7 +1877,7 @@
         "\n",
         "ax.set(xlabel = 'Batsman',ylabel = 'Runs v/s Balls', title = 'Batting Statistics',alpha=np.random.rand())"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1921,7 +1921,7 @@
       "source": [
         "inn1_df.set_index('batsman').plot.pie(y = 'runs',figsize=(10,10))"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1962,7 +1962,7 @@
       "source": [
         "inn_1['scorecard'][1]"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2101,7 +2101,7 @@
         "\n",
         "ax.set(xlabel = 'Bowlers',ylabel = 'Runs v/s Economy', title = 'Bowling Statistics')"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2144,7 +2144,7 @@
       "source": [
         "overs_stats_2.head()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2257,9 +2257,10 @@
         "               ha = 'center', va = 'center',xytext=(0,9),\n",
         "               textcoords = 'offset points')\n",
         "\n",
-        "ax.set(xlabel = 'Overs',ylabel = 'Runs', title = 'Runs Per Over')"
+        "ax.set(xlabel = 'Overs',ylabel = 'Runs', title = 'Runs Per Over')\n",
+        "#comment added by sravya"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2303,7 +2304,7 @@
         "print('Scorecard: ')\n",
         "inn_2['scorecard'][0]"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2476,7 +2477,7 @@
         "\n",
         "ax.set(xlabel = 'Batsman',ylabel = 'Runs v/s Balls', title = 'Batting Statistics')\n"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2519,7 +2520,7 @@
       "source": [
         "fig = inn2_df.set_index('batsman').plot.pie(y = 'runs',figsize=(10,10))"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2548,7 +2549,7 @@
       "source": [
         "inn_2['scorecard'][1]"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2678,7 +2679,7 @@
         "\n",
         "ax.set(xlabel = 'Bowlers',ylabel = 'Runs v/s Economy', title = 'Bowling Statistics')"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2738,7 +2739,7 @@
         "\n",
         "ax.set(xlabel = 'Overs',ylabel = 'Runs', title = 'Runs Per Over')"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2786,7 +2787,7 @@
         "batting_df.rename(columns = new_name, inplace=True)\n",
         "batting_df.head()"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2897,7 +2898,7 @@
         "#fig.set(xlabel='Balls Faced',ylabel = 'Runs Scored',title='BALLS V/S RUNS BY EACH PLAYER')\n",
         "fig.show()"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2972,7 +2973,7 @@
         "df = df1.merge(df2, how='outer',on='over')\n",
         "df.fillna(0,inplace=True)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2999,7 +3000,7 @@
         "    \n",
         "ax.set(xlabel='Overs',ylabel='Runs',title='MANHATTAN')"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3036,7 +3037,7 @@
         "overs_stats_df_1 = copy.deepcopy(overs_stats_1)\n",
         "overs_stats_df_2 = copy.deepcopy(overs_stats_2)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3048,7 +3049,7 @@
         "overs_stats_df_1['player_dismissed_at'] = [at if is_out==1 else np.nan for is_out, at in zip(overs_stats_df_1.player_dismissed, overs_stats_df_1.score)]\n",
         "overs_stats_df_2['player_dismissed_at'] = [at if is_out==1 else np.nan for is_out, at in zip(overs_stats_df_2.player_dismissed, overs_stats_df_2.score)]"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3084,7 +3085,7 @@
         "\n",
         "ax.set(xlabel = 'Overs',ylabel = 'Runs', title = 'Runs Per Over')"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3124,7 +3125,7 @@
       "source": [
         "print('#######'*4+'\\n\\tMATCH RESULT\\n'+'\\t'+'***'*4+'\\n'+match_result)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3174,7 +3175,7 @@
         "    points_df.sort_values(by='points',ascending=False)\n",
         "    return points_df"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3224,7 +3225,7 @@
         "\n",
         "  return team_ground_win_lose_dict\n"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3266,7 +3267,7 @@
         "  return team_ground_win_dict, team_ground_lose_dict, team_ground_win_percent_dict\n",
         "\n"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3300,7 +3301,7 @@
         "    plt.ylabel('Ground Name', fontsize=18)\n",
         "    plt.xlabel('Number of Matches Lost', fontsize=18)"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3390,7 +3391,7 @@
         "    get_india_heat_map(merged, 'points')\n",
         "\n"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3440,7 +3441,7 @@
         "\n",
         "  return team_ground_win_lose_dict\n"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3482,7 +3483,7 @@
         "  return team_ground_win_dict, team_ground_lose_dict, team_ground_win_percent_dict\n",
         "\n"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3532,7 +3533,7 @@
         "\n",
         "  return team_ground_win_loose_dict\n"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3578,7 +3579,7 @@
         "\n",
         "plot_season_ground_win_matches()"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3623,7 +3624,7 @@
         "\n",
         "  return team_ground_win_loose_dict\n"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3634,7 +3635,7 @@
       "source": [
         ""
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3676,7 +3677,7 @@
         "  return team_ground_win_dict, team_ground_loose_dict, team_ground_win_percent_dict\n",
         "\n"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3701,7 +3702,7 @@
         "\n",
         "win_dict"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4001,7 +4002,7 @@
         "\n",
         "loose_df.set_index(win_df.index).plot(kind='bar', stacked=True, xlabel='Ground Name', ylabel='Number of Matches Won')\n"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4082,7 +4083,7 @@
         "team_ground_loose_df.sort_values(by = 'matches_loose')\n",
         "# team_ground_win_percent_df.sort_values(by = 'matches_won')\n"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4231,7 +4232,7 @@
         "plt.xticks(rotation=90)\n",
         "\n"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4275,7 +4276,7 @@
         "sns.barplot(data = team_ground_loose_df,  x='ground', y = 'matches_loose', hue = 'team', dodge = False)\n",
         "plt.xticks(rotation=90)"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4316,7 +4317,7 @@
         "# sns.barplot(bb )\n",
         "# bb"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4327,7 +4328,7 @@
       "source": [
         ""
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4338,7 +4339,7 @@
       "source": [
         ""
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4363,7 +4364,7 @@
         "  return team_state_dict[team_name] if team_name in team_state_dict else np.nan\n",
         "\n"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4383,7 +4384,7 @@
         "podf['state_name'] = podf.apply(lambda x: get_state(x['winner']), axis=1)\n",
         "podf"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4451,7 +4452,7 @@
         "id": "GNjJAMwenGBp"
       },
       "source": [
-        "# comment by ankit bansal\n",
+        "\n",
         "def get_india_heat_map(map_df, column_name, ipl_season):\n",
         "  fig, ax = plt.subplots(1, figsize=(13, 13))\n",
         "  ax.axis('on')\n",
@@ -4461,7 +4462,7 @@
         "  ax.set_facecolor('skyblue')\n",
         "  # ax.xaxis.label.set_color('red')"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4478,7 +4479,7 @@
         "  merged = map_df.set_index('st_nm').join(updated_points_df.set_index('state_name')).fillna(0)\n",
         "  get_india_heat_map(merged, column_name, ipl_season)"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4493,7 +4494,7 @@
         " points = [val*2 for val in df['Matches_won']]\n",
         " return pd.concat([df,pd.DataFrame({'Points':points})],axis=1)"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4511,7 +4512,7 @@
         "Points_df = get_points_table(season)\n",
         "Points_df.sort_values(by='Points',ascending=False)"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4642,7 +4643,7 @@
       "source": [
         "get_india_map_visualization(Points_df, 'Points', 'IPL-2019')\n"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4671,7 +4672,7 @@
       "source": [
         "map_df"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4947,7 +4948,7 @@
         "ax.set_title('State Wise Crime against women in India in 2015', fontdict={'fontsize': '25', 'fontweight' : '3'})\n",
         "map_df.plot(column='count', cmap='YlOrRd', linewidth=0.8, ax=ax, edgecolor='0.8', legend=True)\n"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
