commit on ankit branch

--- a/Ankit_IPL_T20_Cricket_Analysis_Capstone_Project.ipynb
+++ b/Ankit_IPL_T20_Cricket_Analysis_Capstone_Project.ipynb
@@ -34,7 +34,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ankit986/ACM-WH/blob/master/Ankit_IPL_T20_Cricket_Analysis_Capstone_Project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ankit986/ACM-WH/blob/ankit/Ankit_IPL_T20_Cricket_Analysis_Capstone_Project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -60,7 +60,7 @@
       "source": [
         "!pip install geopandas"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,9 +107,10 @@
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
         "import geopandas as gpd\n",
-        "import plotly.express as px"
+        "import plotly.express as px\n",
+        "# by ankit"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -125,7 +126,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,7 +145,7 @@
       "source": [
         "folder_path = '/content/drive/MyDrive/AlmaBetter/Capstone Projects/EDA/IPL/data'"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -156,7 +157,7 @@
         "fp = f\"/content/drive/MyDrive/AlmaBetter/Capstone Projects/EDA/IPL/igismap/Indian_States.shp\"\n",
         "map_df = gpd.read_file(fp)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -172,7 +173,7 @@
         "teams_df = pd.read_csv(folder_path+'/teams.csv')\n",
         "teamwise_home_and_away_df = pd.read_csv(folder_path+'/teamwise_home_and_away.csv')"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -188,7 +189,7 @@
       "source": [
         "players_df.head()"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -293,7 +294,7 @@
       "source": [
         "deliveries_df.head()"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -495,7 +496,7 @@
       "source": [
         "deliveries_df.shape"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -524,7 +525,7 @@
       "source": [
         "matches_df.head()"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -709,7 +710,7 @@
       "source": [
         "most_runs_avg_sr_df"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -883,7 +884,7 @@
       "source": [
         "teams_df"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1014,7 +1015,7 @@
       "source": [
         "teamwise_home_and_away_df.head()"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1169,7 +1170,7 @@
         "matches_df['city'] = matches_df['city'].apply(lambda x: change_name(x, old_city_new_city_dict))\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -1194,7 +1195,7 @@
         "    \n",
         "matches_df = pd.concat([matches_df,pd.DataFrame({'match_number':ls})],axis=1)"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -1217,7 +1218,7 @@
         "print('matches_df Shape: ',matches_df.shape)\n",
         "print('deliveries_df Shape: ',deliveries_df.shape)"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1396,7 +1397,7 @@
         "    else:\n",
         "        return None\n"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -1408,7 +1409,7 @@
         "def get_match_deliveries(match_id):\n",
         "  return deliveries_df[deliveries_df['match_id'] == match_id]"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1450,7 +1451,7 @@
         "\n",
         "  return final_batsman_df, final_bowler_df\n"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -1466,7 +1467,7 @@
       "source": [
         "deliveries_df[deliveries_df.match_id == 56].head(1)"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1578,7 +1579,7 @@
         "  #over_runs_wickets['wickets'] = temp_df.groupby('over')['player_dismissed'].sum()\n",
         "    return over_runs_wickets"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -1651,7 +1652,7 @@
         "  # return batsman_run_ball_dict,  bowler_detail_dict\n",
         "  return create_inning_scorecard(batsman_run_ball_dict, bowler_detail_dict), wickets_fall, overs_stats\n"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -1699,7 +1700,7 @@
         "  return inn_1, wickets_1, inn_2, wickets_2, result, overs_stats_1, overs_stats_2\n",
         "  #return get_batsman_bowler_details(inning_one_df), get_batsman_bowler_details(inning_two_df)  \n"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -1719,7 +1720,7 @@
         "print('Scorecard: ')\n",
         "inn_1['scorecard'][0]"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -1877,7 +1878,7 @@
         "\n",
         "ax.set(xlabel = 'Batsman',ylabel = 'Runs v/s Balls', title = 'Batting Statistics',alpha=np.random.rand())"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1921,7 +1922,7 @@
       "source": [
         "inn1_df.set_index('batsman').plot.pie(y = 'runs',figsize=(10,10))"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1962,7 +1963,7 @@
       "source": [
         "inn_1['scorecard'][1]"
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2101,7 +2102,7 @@
         "\n",
         "ax.set(xlabel = 'Bowlers',ylabel = 'Runs v/s Economy', title = 'Bowling Statistics')"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2144,7 +2145,7 @@
       "source": [
         "overs_stats_2.head()"
       ],
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2257,10 +2258,9 @@
         "               ha = 'center', va = 'center',xytext=(0,9),\n",
         "               textcoords = 'offset points')\n",
         "\n",
-        "ax.set(xlabel = 'Overs',ylabel = 'Runs', title = 'Runs Per Over')\n",
-        "#comment added by sravya"
+        "ax.set(xlabel = 'Overs',ylabel = 'Runs', title = 'Runs Per Over')"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2304,7 +2304,7 @@
         "print('Scorecard: ')\n",
         "inn_2['scorecard'][0]"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -2477,7 +2477,7 @@
         "\n",
         "ax.set(xlabel = 'Batsman',ylabel = 'Runs v/s Balls', title = 'Batting Statistics')\n"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2520,7 +2520,7 @@
       "source": [
         "fig = inn2_df.set_index('batsman').plot.pie(y = 'runs',figsize=(10,10))"
       ],
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2549,7 +2549,7 @@
       "source": [
         "inn_2['scorecard'][1]"
       ],
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2679,7 +2679,7 @@
         "\n",
         "ax.set(xlabel = 'Bowlers',ylabel = 'Runs v/s Economy', title = 'Bowling Statistics')"
       ],
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2739,7 +2739,7 @@
         "\n",
         "ax.set(xlabel = 'Overs',ylabel = 'Runs', title = 'Runs Per Over')"
       ],
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2787,7 +2787,7 @@
         "batting_df.rename(columns = new_name, inplace=True)\n",
         "batting_df.head()"
       ],
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2898,7 +2898,7 @@
         "#fig.set(xlabel='Balls Faced',ylabel = 'Runs Scored',title='BALLS V/S RUNS BY EACH PLAYER')\n",
         "fig.show()"
       ],
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2973,7 +2973,7 @@
         "df = df1.merge(df2, how='outer',on='over')\n",
         "df.fillna(0,inplace=True)"
       ],
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -3000,7 +3000,7 @@
         "    \n",
         "ax.set(xlabel='Overs',ylabel='Runs',title='MANHATTAN')"
       ],
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3037,7 +3037,7 @@
         "overs_stats_df_1 = copy.deepcopy(overs_stats_1)\n",
         "overs_stats_df_2 = copy.deepcopy(overs_stats_2)"
       ],
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -3049,7 +3049,7 @@
         "overs_stats_df_1['player_dismissed_at'] = [at if is_out==1 else np.nan for is_out, at in zip(overs_stats_df_1.player_dismissed, overs_stats_df_1.score)]\n",
         "overs_stats_df_2['player_dismissed_at'] = [at if is_out==1 else np.nan for is_out, at in zip(overs_stats_df_2.player_dismissed, overs_stats_df_2.score)]"
       ],
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -3085,7 +3085,7 @@
         "\n",
         "ax.set(xlabel = 'Overs',ylabel = 'Runs', title = 'Runs Per Over')"
       ],
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3125,7 +3125,7 @@
       "source": [
         "print('#######'*4+'\\n\\tMATCH RESULT\\n'+'\\t'+'***'*4+'\\n'+match_result)"
       ],
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -3175,7 +3175,7 @@
         "    points_df.sort_values(by='points',ascending=False)\n",
         "    return points_df"
       ],
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -3225,7 +3225,7 @@
         "\n",
         "  return team_ground_win_lose_dict\n"
       ],
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -3267,7 +3267,7 @@
         "  return team_ground_win_dict, team_ground_lose_dict, team_ground_win_percent_dict\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -3301,7 +3301,7 @@
         "    plt.ylabel('Ground Name', fontsize=18)\n",
         "    plt.xlabel('Number of Matches Lost', fontsize=18)"
       ],
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -3391,7 +3391,7 @@
         "    get_india_heat_map(merged, 'points')\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -3441,7 +3441,7 @@
         "\n",
         "  return team_ground_win_lose_dict\n"
       ],
-      "execution_count": null,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -3483,7 +3483,7 @@
         "  return team_ground_win_dict, team_ground_lose_dict, team_ground_win_percent_dict\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -3533,7 +3533,7 @@
         "\n",
         "  return team_ground_win_loose_dict\n"
       ],
-      "execution_count": null,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -3579,7 +3579,7 @@
         "\n",
         "plot_season_ground_win_matches()"
       ],
-      "execution_count": null,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3624,7 +3624,7 @@
         "\n",
         "  return team_ground_win_loose_dict\n"
       ],
-      "execution_count": null,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -3635,7 +3635,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -3677,7 +3677,7 @@
         "  return team_ground_win_dict, team_ground_loose_dict, team_ground_win_percent_dict\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -3702,7 +3702,7 @@
         "\n",
         "win_dict"
       ],
-      "execution_count": null,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4002,7 +4002,7 @@
         "\n",
         "loose_df.set_index(win_df.index).plot(kind='bar', stacked=True, xlabel='Ground Name', ylabel='Number of Matches Won')\n"
       ],
-      "execution_count": null,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4083,7 +4083,7 @@
         "team_ground_loose_df.sort_values(by = 'matches_loose')\n",
         "# team_ground_win_percent_df.sort_values(by = 'matches_won')\n"
       ],
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4222,7 +4222,7 @@
         "id": "J9mEI8yDzz6j",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 748
+          "height": 785
         },
         "outputId": "df781f40-9124-4484-d7b7-69cdec2f2027"
       },
@@ -4232,7 +4232,7 @@
         "plt.xticks(rotation=90)\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4267,7 +4267,7 @@
         "id": "WgEngcjRIzof",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 748
+          "height": 785
         },
         "outputId": "76b60ce8-f325-44fb-cb36-8b9c0c42731d"
       },
@@ -4276,7 +4276,7 @@
         "sns.barplot(data = team_ground_loose_df,  x='ground', y = 'matches_loose', hue = 'team', dodge = False)\n",
         "plt.xticks(rotation=90)"
       ],
-      "execution_count": null,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4317,7 +4317,7 @@
         "# sns.barplot(bb )\n",
         "# bb"
       ],
-      "execution_count": null,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -4328,7 +4328,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -4339,7 +4339,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 62,
       "outputs": []
     },
     {
@@ -4364,7 +4364,7 @@
         "  return team_state_dict[team_name] if team_name in team_state_dict else np.nan\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -4384,7 +4384,7 @@
         "podf['state_name'] = podf.apply(lambda x: get_state(x['winner']), axis=1)\n",
         "podf"
       ],
-      "execution_count": null,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4452,7 +4452,7 @@
         "id": "GNjJAMwenGBp"
       },
       "source": [
-        "\n",
+        "# comment by ankit bansal\n",
         "def get_india_heat_map(map_df, column_name, ipl_season):\n",
         "  fig, ax = plt.subplots(1, figsize=(13, 13))\n",
         "  ax.axis('on')\n",
@@ -4462,7 +4462,7 @@
         "  ax.set_facecolor('skyblue')\n",
         "  # ax.xaxis.label.set_color('red')"
       ],
-      "execution_count": null,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -4479,7 +4479,7 @@
         "  merged = map_df.set_index('st_nm').join(updated_points_df.set_index('state_name')).fillna(0)\n",
         "  get_india_heat_map(merged, column_name, ipl_season)"
       ],
-      "execution_count": null,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -4494,7 +4494,7 @@
         " points = [val*2 for val in df['Matches_won']]\n",
         " return pd.concat([df,pd.DataFrame({'Points':points})],axis=1)"
       ],
-      "execution_count": null,
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -4512,7 +4512,7 @@
         "Points_df = get_points_table(season)\n",
         "Points_df.sort_values(by='Points',ascending=False)"
       ],
-      "execution_count": null,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4643,7 +4643,7 @@
       "source": [
         "get_india_map_visualization(Points_df, 'Points', 'IPL-2019')\n"
       ],
-      "execution_count": null,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4672,7 +4672,7 @@
       "source": [
         "map_df"
       ],
-      "execution_count": null,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4948,7 +4948,7 @@
         "ax.set_title('State Wise Crime against women in India in 2015', fontdict={'fontsize': '25', 'fontweight' : '3'})\n",
         "map_df.plot(column='count', cmap='YlOrRd', linewidth=0.8, ax=ax, edgecolor='0.8', legend=True)\n"
       ],
-      "execution_count": null,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "error",
